operator/pkg/model/ingestion/testdata/gateway/basic_grpc/input-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  creationTimestamp: null
  name: my-gateway
  namespace: default
spec:
  gatewayClassName: ""
  listeners:
  - name: prod-web-gw
    port: 80
    protocol: HTTP
status: {}
