operator/pkg/model/ingestion/testdata/gateway/basic_grpc/input-service.yaml
- metadata:
    creationTimestamp: null
    name: grp-service
    namespace: default
  spec: {}
  status:
    loadBalancer: {}
